# TDD_SimpleMockHelper

./: .dockerignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  TC-linux.cmake  TC-windows.cmake  add_post_commit_hook.sh  build_with_cmake_linux.sh  build_with_cmake_windows.sh  docker-compose.yaml  plugins.txt  tdd_simplemockhelper_job.xml  test_with_ctest_linux.sh  test_with_ctest_windows.sh
source/: CMakeLists.txt
source/SimpleMockHelperPlugin/: CMakeLists.txt  SimpleMockHelperInclude.h  SimpleMockHelperMethodNames.h
source/SimpleMockHelperPlugin/MockInterface/: CMakeLists.txt  SimpleMockHelperInterface.cpp  SimpleMockHelperInterface.h
source/SimpleMockHelperPlugin/MockInterface/MockHelper/: SimpleMockHelper.cpp  SimpleMockHelper.h
source/Tests/: CMakeLists.txt  test_SimpleMockHelper.cpp
